Initial Grid Exploration

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,106 +1,14 @@
-// BASE
-// ========================================== */
-
-html {
+// Global
+html{
   box-sizing: border-box;
-  font-size: $font-size-root;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after{
   box-sizing: inherit;
 }
 
-body {
+body{
   font-family: $font-family-base;
-  font-size: $font-size-base;
-  line-height: $line-height;
-  color: $body-color;
-  background-color: $body-bg;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: .5rem;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-ol,
-ul,
-dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-ol ol,
-ul ul,
-ol ul,
-ul ol {
-  margin-bottom: 0;
-}
-
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-bottom: .5rem;
-  margin-left: 0;
-}
-
-blockquote {
-  margin: 0 0 1rem;
-}
-
-a {
-  // color: $link-color;
-  text-decoration: none;
-}
-
-pre {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-figure {
-  margin: 0 0 1rem;
-}
-
-img {
-  vertical-align: middle;
-}
-
-table {
-  background-color: #fff;
-}
-
-th {
-  text-align: left;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: .5rem;
-}
-
-input,
-button,
-select,
-textarea {
-  margin: 0;
-  line-height: inherit;
-}
-
-textarea {
-  resize: vertical;
-}
-
-input[type="search"] {
-  -webkit-appearance: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
