--- a/scss/vertebrae.scss
+++ b/scss/vertebrae.scss
@@ -12,3 +12,12 @@
 // Core
 @import "normalize";
 @import "base";
+
+// UI Kit
+@import "type";
+@import "buttons";
+@import "grids";
+@import "helpers";
+
+// Vertebrae
+@import "theme";
