--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,21 +1,21 @@
 // VERTEBRAE BRANDING
 // ========================================== */
 
-// Palette
+// Color Palette
 $brand-primary: #0275d8;
 $brand-success: #5cb85c;
-$brand-info: #5bc0de;
+$brand-info:    #5bc0de;
 $brand-warning: #f0ad4e;
-$brand-danger: #d9534f;
+$brand-danger:  #d9534f;
 
-// Grayscale
-$gray-light: #818a91;
-$gray: #55595c;
-$gray-dark: #373a3c;
+// Grayscale Palette
+$gray-light:    #818a91;
+$gray:          #55595c;
+$gray-dark:     #373a3c;
 
 // Font Stack
 $font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
-$font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-base: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Font Options:
 $font-smoothing: true;
@@ -24,10 +24,10 @@ $font-rendering: false;
 // DOM SCAFFOLD
 // ========================================== */
 
-// Html <html>
+// Html <html/>
 $font-size-root: 18px;
 
-// Body <body>
+// Body <body/>
 $body-bg: #fff;
 $line-height: 1.6;
 $font-size-base: 1rem;
