--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,7 +1,6 @@
-.btn{
+%btn{
     display: inline-block;
     padding: 12px 30px;
-    color: #555;
     text-align: center;
     font-size: 11px;
     font-weight: 800;
@@ -15,14 +14,14 @@
     cursor: pointer;
 }
 .btn__primary{
-  @extend .btn;
+  @extend %btn;
   background-color: #33C3F0;
   border: 1px solid #33C3F0;
   color: #fff;
 }
 
 .btn__primary--outline{
-  @extend .btn;
+  @extend %btn;
   border: 1px solid #33C3F0;
   color: #33C3F0;
 }
