--- a/scss/vertebrae.scss
+++ b/scss/vertebrae.scss
@@ -1,9 +1,10 @@
 /*
- * Vertebrae
- * https://github.com/alexhernandez/vertebrae
- *
- * Released under MIT license. Copyright 2015.
- */
+* Vertebrae v0.0.1
+* Copyright 2015, Alex Hernandez
+* https://github.com/alexhernandez/vertebrae
+*
+* Free to use under the MIT license.
+*/
 
 // Global
 @import "variables";
