--- a/scss/_grids.scss
+++ b/scss/_grids.scss
@@ -1,49 +1,59 @@
 // GRID NOTES:
 // -
-// GUTTERS - Margin vs. Padding
+// COLUMNS - 12 vs. 24
 // SIZING - PX, %, EM, REM
+// GUTTERS - Margin vs. Padding
+// BREAKPOINTS - XS, SM, MD, LG, XL
 
 $grid-columns: 12;
-$gutter: 30px;
-$column-names: one, two, three, four, five, six, seven, eight, nine, ten, eleven, twelve;
+$grid-gutter: 30px;
+$grid-column-names: one, two, three, four, five, six, seven, eight, nine, ten, eleven, twelve;
+
+$grid-breakpoints: (
+  sm: 544px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+$container-widths: (
+  sm: 480px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
 
 .container{
   width: auto;
   margin-left: auto;
   margin-right: auto;
+  @include clearfix();
 
-  /* Medium Devices, Desktops */
-  @media only screen and (min-width : 768px) {
-    max-width: 750px;
+  @each $breakpoint, $container-width in $container-widths {
+    @include media-query($breakpoint) {
+      max-width: $container-width;
+    }
   }
 
-  /* Medium Devices, Desktops */
-  @media only screen and (min-width : 992px) {
-    max-width: 970px;
-  }
-
-  /* Large Devices, Wide Screens */
-  @media only screen and (min-width : 1200px) {
-    max-width: 1170px;
-  }
 }
 
 .grid{
-  @include clearfix();
   margin-left: auto;
   margin-right: auto;
+  @include clearfix();
 }
 
 .column{
   width: auto;
   min-height: 1px;
-  padding-left: ($gutter / 2);
-  padding-right: ($gutter / 2);
+  position: relative;
+  padding-left: ($grid-gutter / 2);
+  padding-right: ($grid-gutter / 2);
 }
 
-@media only screen and (min-width : 768px) {
-  @each $column in $column-names {
-    $i: index($column-names, $column);
+@media (min-width : map-get($grid-breakpoints, "sm")) {
+  @each $column in $grid-column-names {
+    $i: index($grid-column-names, $column);
     .#{$column} {
         float: left;
         width: percentage($i / $grid-columns);
