--- a/scss/vertebrae.scss
+++ b/scss/vertebrae.scss
@@ -17,7 +17,8 @@
 // UI Kit
 @import "type";
 @import "buttons";
-@import "grids";
+@import "forms";
+@import "grid";
 @import "helpers";
 
 // Vertebrae
