--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -20,3 +20,43 @@
     @content;
   }
 }
+
+// CONTAINER
+// ______________________________________
+
+@mixin make-container() {
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  @include clearfix();
+
+  @each $breakpoint, $container-width in $container-widths {
+    @include media-query($breakpoint) {
+      max-width: $container-width;
+    }
+  }
+}
+
+// COLUMN ROW
+// ______________________________________
+
+@mixin make-row() {
+  margin-left: auto;
+  margin-right: auto;
+  @include clearfix();
+}
+
+// COLUMNS
+// ______________________________________
+
+@mixin make-columns() {
+  @media (min-width: map-get($grid-breakpoints, "md")) {
+    @each $column-name in $grid-column-names {
+      $i: index($grid-column-names, $column-name);
+      .#{$column-name} {
+          float: left;
+          width: percentage($i / $grid-columns);
+      }
+    }
+  }
+}
