--- a/scss/vertebrae.scss
+++ b/scss/vertebrae.scss
@@ -6,19 +6,18 @@
 * Free to use under the MIT license.
 */
 
-// Global
-@import "variables";
-@import "mixins";
-
 // Core
 @import "normalize";
+@import "variables";
 @import "base";
+@import "mixins";
 
 // UI Kit
 @import "type";
 @import "buttons";
 @import "forms";
 @import "grid";
+@import "posts";
 @import "helpers";
 
 // Vertebrae
